# niche-research-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
data/: eval_queries.json  generate_mock_data.py  mock_wb_products.json
docs/: ARCHITECTURE.md  DEFENSE_NOTES.md  EVALS.md  ISOLATION.md  MEMORY.md  OBSERVABILITY.md  PRD_TEMPLATE.md  REPORT.html  REPORT.md  TZ.md
evals/: component_evals.py  run_evals.ipynb  system_evals.py
evals/judge_prompts/: report_quality.md
knowledge_base/compliance/: eac_certification.md  tr_ts_004.md  tr_ts_020.md
knowledge_base/specs_taxonomy/: electric_toothbrush.md  epilator.md  hair_dryer.md
knowledge_base/templates/: good_card_examples.md  prd_template.md
knowledge_base/wb_rules/: card_requirements.md  commission_logistics.md  photo_standards.md  ranking_factors.md
observability/: otel-collector-config.yaml  prometheus.yml
observability/grafana/dashboards/: niche_research_agent.json
observability/grafana/provisioning/dashboards/: dashboards.yml
prompts/: niche_analyst.md  prd_writer.md  reporter.md  scout.md  specs_miner.md  usp_analyst.md
scripts/: render_mermaid.py  render_report_pdf.py
skills/prd_validator/: SKILL.md
skills/specs_extractor/: SKILL.md
skills/specs_normalizer/: SKILL.md
skills/unit_economics/: SKILL.md
skills/usp_parser/: SKILL.md
skills/wb_search/: SKILL.md
src/: __init__.py  config.py  main.py
src/agents/: __init__.py  niche_analyst.py  prd_writer.py  reporter.py  scout.py  specs_miner.py  supervisor.py  usp_analyst.py
src/llm/: __init__.py  ollama_client.py
src/memory/: __init__.py  episodic.py  semantic.py  working.py
src/observability/: __init__.py  langfuse_hook.py  logging.py  metrics.py  tracing.py
src/schemas/: __init__.py  analysis.py  filters.py  product.py  state.py
src/tools/: __init__.py  calculator.py  prd_validator.py  specs_normalizer.py  unit_economics.py  usp_classifier.py  wb_parser.py
