[project]
name = "niche-research-agent"
version = "0.1.0"
description = "Multi-agent system for Wildberries niche research (small home appliances)"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }

dependencies = [
    # LangGraph + LangChain
    "langgraph>=0.2.50",
    "langchain>=0.3.10",
    "langchain-core>=0.3.20",
    "langchain-community>=0.3.10",
    "langchain-ollama>=0.2.0",

    # Pydantic for structured output
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",

    # Memory / RAG
    # Используем chromadb-client (HTTP-only), а не chromadb. Полный chromadb тянет за собой
    # бинарный chroma-hnswlib для embedded-индексации, который требует MSVC Build Tools
    # на Windows. У нас Chroma всегда в Docker через HttpClient — embedded не нужен.
    # API import'ов идентичен: import chromadb; chromadb.HttpClient(...).
    "chromadb-client>=0.5.20,<0.6",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.3.0",         # для опционального ререйнкера

    # HTTP / parsing
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    "beautifulsoup4>=4.12.0",

    # Storage
    "aiosqlite>=0.20.0",

    # Observability
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-otlp>=1.28.0",
    "opentelemetry-instrumentation-httpx>=0.49b0",
    "prometheus-client>=0.21.0",
    "loguru>=0.7.2",
    "langfuse>=2.55.0",

    # CLI
    "typer>=0.13.0",
    "rich>=13.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]
# Базовые eval-зависимости: jupyter + DataFrame/plot стек. Достаточно для
# component_evals.py, system_evals.py, run_evals.ipynb.
evals = [
    "jupyterlab>=4.3.0",
    "pandas>=2.2.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
]

# Полный набор для future-work: фреймворки оценки RAG/LLM (~1.5 ГБ зависимостей).
# Текущая кодовая база их не использует, но pyproject держит явный hook,
# чтобы потом можно было `uv sync --extra evals-full`.
evals-full = [
    "ragas>=0.2.0",
    "deepeval>=1.4.0",
]

[project.scripts]
nra = "src.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]    # line length — обрабатывается форматтером

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
